--- a/notebooks/3_Fitting_Neural_Nets_to_MNIST_Handwritten_Digits.ipynb
+++ b/notebooks/3_Fitting_Neural_Nets_to_MNIST_Handwritten_Digits.ipynb
@@ -6,7 +6,7 @@
       "name": "3: Fitting Neural Nets to MNIST Handwritten Digits",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMCyac9zR5ycogGp5DtmRJR",
+      "authorship_tag": "ABX9TyOh8lE2lOAaPEEuCGQKOeQ1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -93,7 +93,7 @@
         "The dataset contains $60,000$ examples for training and $10,000$ examples for testing. Each image is $28\\times 28$ pixels, each with a greyscale value from 0 to 255 (0 is black, 255 is white). Below, see some examples; for more on MNIST, see Yann LeCun's [website](http://yann.lecun.com/exdb/mnist/). \n",
         "\n",
         "<br>\n",
-        "<img src=\"https://github.com/allemanau/NUIT_tensorflow/blob/master/images/mnist.jpeg?raw=1\">\n",
+        "<img src=\"https://github.com/allemanau/NUIT_tensorflow/blob/master/images/mnist.jpg?raw=1\">\n",
         "<br><br>"
       ]
     },
