--- a/notebooks/4_Advanced_Techniques_and_Convolutional_Neural_Nets.ipynb
+++ b/notebooks/4_Advanced_Techniques_and_Convolutional_Neural_Nets.ipynb
@@ -217,7 +217,7 @@
         "\n",
         "conv_model.fit(x_train_scl, \n",
         "          y_train, \n",
-        "          #batch_size = 100,\n",
+        "          batch_size = batch_size,\n",
         "          epochs = 50,\n",
         "          validation_split = 0.1,\n",
         "          callbacks = [callback])"
@@ -256,7 +256,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Again, let's peek at a selection of mistakes."
+        "Again, let's peek at a selection of mistakes. Hard to blame the model for these."
       ]
     },
     {
@@ -275,8 +275,8 @@
         "\n",
         "# Select one random misclass for each digit in the data set.\n",
         "for i in range(10):\n",
-        "    ind = np.random.choice(np.ndarray.flatten(np.argwhere((y_test == i) & (y_test != preds))))\n",
-        "    actual = y_test[ind]\n",
+        "    ind = np.random.choice(np.ndarray.flatten(np.argwhere((raw_y_test == i) & (raw_y_test != preds))))\n",
+        "    actual = raw_y_test[ind]\n",
         "    predicted = preds[ind]\n",
         "    plottable_image = np.reshape(x_test[ind], (28, 28))\n",
         "    ax = fig.add_subplot(2, 5, i+1)\n",
@@ -481,7 +481,8 @@
         "              metrics = ['accuracy'])\n",
         "\n",
         "# Validation steps argument only applies when ImageDataGenerator is used.\n",
-        "# We'll just train for 40 epochs.\n",
+        "# Since the training data is changing on each epoch, overfitting is difficult.\n",
+        "# So, no callback. We'll just train for 40 epochs.\n",
         "conv_model.fit(train_set, \n",
         "                         steps_per_epoch = 60000//batch_size, \n",
         "                         validation_data = val_set, \n",
@@ -498,7 +499,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Evaluation should yield accuracy of around 99.4%, about 0.4% off the best known classifier. Not too shabby! To boost this much higher, we'd need to complicate the model architecture. I encourage you to check out examples on Kaggle; for instance, [this one hits 99.7% accuracy](https://www.kaggle.com/yassineghouzam/introduction-to-cnn-keras-0-997-top-6)."
+        "Evaluation should yield accuracy of around 99.4%, about 0.4% off the best known classifier. To boost this much higher, complicating the model architecture is the next step. I encourage you to check out examples on Kaggle; for instance, [this one hits 99.7% accuracy](https://www.kaggle.com/yassineghouzam/introduction-to-cnn-keras-0-997-top-6)."
       ]
     },
     {
@@ -510,6 +511,43 @@
       },
       "source": [
         "conv_model.evaluate(x_test_scl, y_test)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "X6VRzsf_-TYr",
+        "colab_type": "text"
+      },
+      "source": [
+        "Some people just have poor handwriting:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "T-GIWjJe-Sj_",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Get predicted classes.\n",
+        "preds = conv_model.predict_classes(x_test_scl)\n",
+        "\n",
+        "# Prepare a figure for subplotting.\n",
+        "fig = plt.figure(figsize=(12, 6))\n",
+        "\n",
+        "# Select one random misclass for each digit in the data set.\n",
+        "for i in range(10):\n",
+        "    ind = np.random.choice(np.ndarray.flatten(np.argwhere((raw_y_test == i) & (raw_y_test != preds))))\n",
+        "    actual = raw_y_test[ind]\n",
+        "    predicted = preds[ind]\n",
+        "    plottable_image = np.reshape(x_test[ind], (28, 28))\n",
+        "    ax = fig.add_subplot(2, 5, i+1)\n",
+        "    ax.imshow(plottable_image, cmap='gray_r')\n",
+        "    plt.xlabel(\"Actual: \" + \"{}\".format(actual) + \", Predicted: \" + \"{}\".format(predicted))"
       ],
       "execution_count": 0,
       "outputs": []
