--- a/notebooks/3_Fitting_Neural_Nets_to_MNIST_Handwritten_Digits.ipynb
+++ b/notebooks/3_Fitting_Neural_Nets_to_MNIST_Handwritten_Digits.ipynb
@@ -6,7 +6,6 @@
       "name": "3: Fitting Neural Nets to MNIST Handwritten Digits",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOh8lE2lOAaPEEuCGQKOeQ1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -291,7 +290,9 @@
         "\n",
         "<img src=\"https://github.com/allemanau/NUIT_tensorflow/blob/master/images/network_architecture.png?raw=1\">\n",
         "\n",
-        "Using the layering syntax from the previous notebook, let's build this model."
+        "Using the layering syntax from the previous notebook, let's build this model. Or, actually...\n",
+        "\n",
+        "## __Exercise__"
       ]
     },
     {
@@ -302,12 +303,10 @@
         "colab": {}
       },
       "source": [
+        "### BUILD THE MODEL BELOW\n",
         "basic_model = Sequential()\n",
-        "basic_model.add(Flatten(input_shape = (28,28)))\n",
-        "basic_model.add(Dense(units = 128))\n",
-        "basic_model.add(Activation(activation = 'relu'))\n",
-        "basic_model.add(Dense(units = 10))\n",
-        "basic_model.add(Activation(activation = 'softmax'))\n",
+        "# Add layers here.\n",
+        "\n",
         "\n",
         "# Plot our model.\n",
         "plot_model(basic_model, show_shapes = True)"
