--- a/notebooks/1_Colab_Python_and_TensorFlow.ipynb
+++ b/notebooks/1_Colab_Python_and_TensorFlow.ipynb
@@ -21,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/allemanau/NUIT_tensorflow/blob/master/notebooks/1_Colab%2C_Python%2C_and_TensorFlow.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/allemanau/NUIT_tensorflow/blob/master/notebooks/1_Colab_Python_and_TensorFlow.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -108,9 +108,7 @@
         "colab": {}
       },
       "source": [
-        "### Two ways to run this cell: the 'Play' button, and Command/Control+Enter\n",
-        "\n",
-        "\n"
+        "### Two ways to run this cell: the 'Play' button, and Command/Control+Enter\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -310,8 +308,7 @@
         "\n",
         "print('Element-wise division:\\n tf.divide(t3, t3) =\\n {}\\n'.format(tf.divide(t3, t3)))  # Notice this returns floating point values.\n",
         "\n",
-        "# Try the operator overloads * and / to verify:\n",
-        "\n"
+        "# Try the operator overloads * and / to verify:\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -323,7 +320,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Matrix multiplication and exponentiation:"
+        "Matrix multiplication and exponentiation. Note that matrix multiplication is actually \"batch multiplication\" if tensor rank >2."
       ]
     },
     {
@@ -428,6 +425,19 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "V4xfQiYfHUV9",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "2Bk6CtYxFGT0",
@@ -440,6 +450,19 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JQarAFwpHVqf",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "hvVogIOaJYPQ",
@@ -449,7 +472,10 @@
         "__1c: Emulate the activation of a layer for one training example__\n",
         "\n",
         "1. Use `tf.matmul()` to compute the product of `input_dat` and `weights` (should be of shape `(1, 5)`).\n",
-        "2. Use `tf.keras.activation.softmax()` to find the most activated neuron for `input_dat`."
+        "2. Use `tf.keras.activation.softmax()` to find the most activated neuron for `input_dat`. For a 1D tensor of size $(J,)$, the softmax function computes a probability distribution:\n",
+        "\\begin{equation*}\n",
+        "\\text{softmax}(x_{i}) = \\frac{\\exp(x_{i})}{\\sum_{j=1}^{J}\\exp(x_{j})}\n",
+        "\\end{equation*}"
       ]
     },
     {
