--- a/notebooks/3_Fitting_Neural_Nets_to_MNIST_Handwritten_Digits.ipynb
+++ b/notebooks/3_Fitting_Neural_Nets_to_MNIST_Handwritten_Digits.ipynb
@@ -87,7 +87,7 @@
       "source": [
         "## Importing MNIST data\n",
         "\n",
-        "For this part of the workshop we'll use the MNIST handwriting data set. You might've heard of this dataset -- it's a benchmark for deep learning and is easily accessible through Tensorflow.\n",
+        "For this part of the workshop we'll use the MNIST handwriting data set. You might've heard of this dataset -- it's a benchmark for machine learning techniques and is easily accessible through Tensorflow.\n",
         "\n",
         "The dataset contains $60,000$ examples for training and $10,000$ examples for testing. Each image is $28\\times 28$ pixels, each with a greyscale value from 0 to 255 (0 is black, 255 is white). Below, see some examples; for more on MNIST, see Yann LeCun's [website](http://yann.lecun.com/exdb/mnist/). \n",
         "\n",
@@ -106,7 +106,7 @@
         "### Data dimension\n",
         "Here, we specify the dimensions of the images which will be used in several places in the code below. Defining these variables makes it easier (compared with using hard-coded number all throughout the code) to modify them later. Ideally these would be inferred from the data that has been read, but here we will just write the numbers.\n",
         "\n",
-        "It's important to note that in a linear model, we have to flatten the input images into a vector. Here, each of the $28\\times28$ images are flattened into a $1\\times784$ vector. \n",
+        "It's important to note that in a linear model, we have to flatten the input images into a vector. Here, each of the $28\\times28$ images are flattened into a vector of length 784. \n",
         "\n",
         "### 1.3. Load the data and display the sizes\n",
         "Because it is so often used to test network architecture, built-in functions are provided to load the data set into TensorFlow. We can use a built-in function to load the `train` and `test` splits easily:"
@@ -134,7 +134,7 @@
         "colab_type": "text"
       },
       "source": [
-        "To get a better sense of the data, let's checkout the shapes of the loaded arrays."
+        "To get a better sense of the data, let's check out the shapes of the loaded arrays."
       ]
     },
     {
@@ -184,7 +184,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Although there are model configurations that don't require one-hot encoding of the outcome variable, it's good practice to stick with a consistent coding scheme unless you are comfortable with optimization options."
+        "Although there are model configurations that don't require __one-hot encoding__ of the outcome variable, it's good practice to stick with a consistent coding scheme unless you are comfortable with optimization options. One-hot encoding just changes the representation from a single categorical variable to a categorical indicator matrix. Although we don't have a model built yet, let's do this now."
       ]
     },
     {
@@ -290,7 +290,7 @@
         "\n",
         "<img src=\"https://github.com/allemanau/NUIT_tensorflow/blob/master/images/network_architecture.png?raw=1\">\n",
         "\n",
-        "Using the layering syntax from the previous notebook, let's build this model. Or, actually...\n",
+        "Using the layering syntax from the previous notebook, let's build this model.\n",
         "\n",
         "## __Exercise__"
       ]
@@ -305,6 +305,7 @@
       "source": [
         "### BUILD THE MODEL BELOW\n",
         "basic_model = Sequential()\n",
+        "\n",
         "# Add layers here.\n",
         "\n",
         "\n",
@@ -393,6 +394,7 @@
       "source": [
         "# Get predicted classes.\n",
         "preds = basic_model.predict_classes(x_test)\n",
+        "print(preds)\n",
         "\n",
         "# Prepare a figure for subplotting.\n",
         "fig = plt.figure(figsize=(12, 6))\n",
@@ -419,7 +421,7 @@
       "source": [
         "### Importance of scaling features\n",
         "\n",
-        "Unscaled features often result in numerical instability in the gradient during the fitting process. Let's rescale the features to lie between 0 and 1 and refit the model."
+        "Unscaled features can result in numerical instability in the gradient during the fitting process, slowing convergence and drgrading performance. Let's rescale the features to lie between 0 and 1 and refit the model."
       ]
     },
     {
