--- a/notebooks/4_Advanced_Techniques_and_Convolutional_Neural_Nets.ipynb
+++ b/notebooks/4_Advanced_Techniques_and_Convolutional_Neural_Nets.ipynb
@@ -61,7 +61,7 @@
       "source": [
         "### Using a GPU runtime\n",
         "\n",
-        "Convolutional nets are more expensive to train than fully connected neural nets. We will use GPU acceleration for this notebook to speed the process along. GPUs are in favor with machine learning enthusiasts because they are quick to process tensors and convolve images (this is, after all, a GPU's full-time job)."
+        "Convolutional nets are more expensive to train than fully connected neural nets. We will use GPU acceleration for this notebook to speed the process along. GPUs are in favor with machine learning enthusiasts because they are quick to process tensors and convolve images (this is, after all, a GPU's full-time job). You can switch to a GPU runtime by navigating to `Runtime > Change runtime type` in the Colab toolbar above."
       ]
     },
     {
@@ -499,7 +499,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Evaluation should yield accuracy of around 99.4%, about 0.4% off the best known classifier. To boost this much higher, complicating the model architecture is the next step. I encourage you to check out examples on Kaggle; for instance, [this one hits 99.7% accuracy](https://www.kaggle.com/yassineghouzam/introduction-to-cnn-keras-0-997-top-6)."
+        "Evaluation should yield accuracy of around 99.4%, about 0.4% off the best known classifier. To boost this much higher, complicating the model architecture is the next step. To see how, I encourage you to check out examples on Kaggle; for instance, [this one hits 99.7% accuracy](https://www.kaggle.com/yassineghouzam/introduction-to-cnn-keras-0-997-top-6)."
       ]
     },
     {
@@ -522,7 +522,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Some people just have poor handwriting:"
+        "The unfortunate truth is that some people have poor handwriting:"
       ]
     },
     {
@@ -551,6 +551,25 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "shsRm7RMTvnb",
+        "colab_type": "text"
+      },
+      "source": [
+        "## __Conclusion & Recap__\n",
+        "\n",
+        "Today, we discussed fundamentals of deep learning in TensorFlow, including network architecture, parameter tuning, validation, callbacks, convnets, and data augmentation. As you might guess, though, there's a lot more to learn. Some things we didn't discuss in case you are interested:\n",
+        "\n",
+        "- __Recurrent__ and __long short-term memory__ networks (RNN, LSTM) for time series or text data\n",
+        "- __Transfer learning__ for adapting pretrained models to new problems\n",
+        "- __Autoencoders__ and __self-organizing maps__ for unsupervised learning\n",
+        "- Using TensorFlow to write __custom layers__ for a learning model\n",
+        "\n",
+        "Thanks for your time! If you have any questions regarding anything we discussed today, or want help with your own project in TensorFlow, feel free to file a [consultation request with Research Computing Services](https://www.it.northwestern.edu/research/consultation/data-services.html). For more resources and exercises, check out the [Research Computing Services Blog](https://sites.northwestern.edu/researchcomputing/2020/05/01/online-learning-resources-deep-learning-with-tensorflow/)."
+      ]
     }
   ]
 }
